--- a/src/styles/components/common/proTip.scss
+++ b/src/styles/components/common/proTip.scss
@@ -1,7 +1,7 @@
 .pro-tip {
   position: absolute;
   left: 1.4rem;
-  top: 20rem;
+  top: 16rem;
 
   p {
     margin-left: 2.8rem;
@@ -21,6 +21,20 @@
     p {
       width: unset;
       max-width: 60rem;
+    }
+  }
+  @include mid-below {
+    left: 1.4rem;
+    top: 11.5rem;
+    max-width: unset;
+    display: flex;
+    align-items: center;
+
+    img {
+      width: 8rem;
+    }
+    p {
+      margin: 0 1rem;
     }
   }
 }
